Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -32,7 +32,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here\n"
+    "#Your code here\n",
+    "import panda"
    ]
   },
   {
