--- a/index.ipynb
+++ b/index.ipynb
@@ -33,7 +33,8 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "import panda"
+    "import pandas as pd\n",
+    "df = pd.read_csv('')"
    ]
   },
   {
