Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -34,7 +34,8 @@
    "source": [
     "#Your code here\n",
     "import pandas as pd\n",
-    "df = pd.read_csv('creditcard.csv.gz', compression='gzip')"
+    "df = pd.read_csv('creditcard.csv.gz', compression='gzip')\n",
+    "df.head()"
    ]
   },
   {
