Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -255,7 +255,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "df."
    ]
   },
   {
