Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -260,14 +260,14 @@
        "284807"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Your code here\n",
-    "df['Class'].groupby().count()"
+    "df['Class'].count()"
    ]
   },
   {
