--- a/index.ipynb
+++ b/index.ipynb
@@ -251,24 +251,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'method' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-1d398f75f17b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Your code here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgroupby\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Class'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcount\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: 'method' object is not subscriptable"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Time</th>\n",
+       "      <th>V1</th>\n",
+       "      <th>V2</th>\n",
+       "      <th>V3</th>\n",
+       "      <th>V4</th>\n",
+       "      <th>V5</th>\n",
+       "      <th>V6</th>\n",
+       "      <th>V7</th>\n",
+       "      <th>V8</th>\n",
+       "      <th>V9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>V20</th>\n",
+       "      <th>V21</th>\n",
+       "      <th>V22</th>\n",
+       "      <th>V23</th>\n",
+       "      <th>V24</th>\n",
+       "      <th>V25</th>\n",
+       "      <th>V26</th>\n",
+       "      <th>V27</th>\n",
+       "      <th>V28</th>\n",
+       "      <th>Amount</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Class</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>284315</td>\n",
+       "      <td>284315</td>\n",
+       "      <td>284315</td>\n",
+       "      <td>284315</td>\n",
+       "      <td>284315</td>\n",
+       "      <td>284315</td>\n",
+       "      <td>284315</td>\n",
+       "      <td>284315</td>\n",
+       "      <td>284315</td>\n",
+       "      <td>284315</td>\n",
+       "      <td>...</td>\n",
+       "      <td>284315</td>\n",
+       "      <td>284315</td>\n",
+       "      <td>284315</td>\n",
+       "      <td>284315</td>\n",
+       "      <td>284315</td>\n",
+       "      <td>284315</td>\n",
+       "      <td>284315</td>\n",
+       "      <td>284315</td>\n",
+       "      <td>284315</td>\n",
+       "      <td>284315</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>492</td>\n",
+       "      <td>492</td>\n",
+       "      <td>492</td>\n",
+       "      <td>492</td>\n",
+       "      <td>492</td>\n",
+       "      <td>492</td>\n",
+       "      <td>492</td>\n",
+       "      <td>492</td>\n",
+       "      <td>492</td>\n",
+       "      <td>492</td>\n",
+       "      <td>...</td>\n",
+       "      <td>492</td>\n",
+       "      <td>492</td>\n",
+       "      <td>492</td>\n",
+       "      <td>492</td>\n",
+       "      <td>492</td>\n",
+       "      <td>492</td>\n",
+       "      <td>492</td>\n",
+       "      <td>492</td>\n",
+       "      <td>492</td>\n",
+       "      <td>492</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2 rows × 30 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Time      V1      V2      V3      V4      V5      V6      V7      V8  \\\n",
+       "Class                                                                           \n",
+       "0      284315  284315  284315  284315  284315  284315  284315  284315  284315   \n",
+       "1         492     492     492     492     492     492     492     492     492   \n",
+       "\n",
+       "           V9   ...       V20     V21     V22     V23     V24     V25     V26  \\\n",
+       "Class           ...                                                             \n",
+       "0      284315   ...    284315  284315  284315  284315  284315  284315  284315   \n",
+       "1         492   ...       492     492     492     492     492     492     492   \n",
+       "\n",
+       "          V27     V28  Amount  \n",
+       "Class                          \n",
+       "0      284315  284315  284315  \n",
+       "1         492     492     492  \n",
+       "\n",
+       "[2 rows x 30 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "#Your code here\n",
-    "df.groupby['Class'].count()"
+    "df.groupby('Class').count()"
    ]
   },
   {
