Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -420,7 +420,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "X = df"
    ]
   },
   {
