Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -29,7 +29,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -236,6 +238,15 @@
     "import pandas as pd\n",
     "df = pd.read_csv('creditcard.csv.gz', compression='gzip')\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.iloc[]"
    ]
   },
   {
