Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2207,7 +2207,8 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "X = df.iloc[:,1:29]"
+    "X = df.iloc[:,1:29]\n",
+    "y = df['Class']"
    ]
   },
   {
