--- a/index.ipynb
+++ b/index.ipynb
@@ -2208,7 +2208,7 @@
    "source": [
     "#Your code here\n",
     "X = df.iloc[:,1:29]\n",
-    "y = df['Class']"
+    "y = df['Class']\n"
    ]
   },
   {
