Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2208,7 +2208,8 @@
    "source": [
     "#Your code here\n",
     "X = df.iloc[:,1:29]\n",
-    "y = df['Class']\n"
+    "y = df['Class']\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33, random_state=42)"
    ]
   },
   {
