Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2209,7 +2209,8 @@
     "#Your code here\n",
     "X = df.iloc[:,1:29]\n",
     "y = df['Class']\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33, random_state=42)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=0)\n",
+    "\n"
    ]
   },
   {
