--- a/index.ipynb
+++ b/index.ipynb
@@ -2230,7 +2230,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here\n"
+    "#Your code here\n",
+    "from "
    ]
   },
   {
