Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2231,7 +2231,11 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "from "
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "logreg = LogisticRegression(fit_intercept = False, C = 1e12)\n",
+    "model_log = logreg.fit(X_train, y_train)\n",
+    "model_log"
    ]
   },
   {
