--- a/index.ipynb
+++ b/index.ipynb
@@ -2226,7 +2226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2234,8 +2234,23 @@
      "output_type": "stream",
      "text": [
       "/opt/conda/envs/learn-env/lib/python3.6/site-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-      "  FutureWarning)\n"
+      "  FutureWarning)\n",
+      "/opt/conda/envs/learn-env/lib/python3.6/site-packages/sklearn/svm/base.py:922: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(C=1000000000000.0, class_weight=None, dual=False,\n",
+       "          fit_intercept=False, intercept_scaling=1, max_iter=100,\n",
+       "          multi_class='warn', n_jobs=None, penalty='l2', random_state=None,\n",
+       "          solver='warn', tol=0.0001, verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
