Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2227,7 +2227,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -2261,6 +2263,13 @@
     "model_log = logreg.fit(X_train, y_train)\n",
     "model_log"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
