Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2269,7 +2269,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.metrics import roc_curve, auc\n",
+    "y_score = model_log.decision_function(X_test)\n",
+    "fpr, tpr, thresholds = roc_curve(y_test, y_score)\n"
+   ]
   },
   {
    "cell_type": "markdown",
