--- a/index.ipynb
+++ b/index.ipynb
@@ -2272,7 +2272,29 @@
    "source": [
     "from sklearn.metrics import roc_curve, auc\n",
     "y_score = model_log.decision_function(X_test)\n",
-    "fpr, tpr, thresholds = roc_curve(y_test, y_score)\n"
+    "fpr, tpr, thresholds = roc_curve(y_test, y_score)\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "%matplotlib inline\n",
+    "\n",
+    "#Seaborns Beautiful Styling\n",
+    "sns.set_style(\"darkgrid\", {\"axes.facecolor\": \".9\"})\n",
+    "\n",
+    "plt.figure(figsize=(10,8))\n",
+    "lw = 2\n",
+    "plt.plot(fpr, tpr, color='darkorange',\n",
+    "         lw=lw, label='ROC curve')\n",
+    "plt.plot([0, 1], [0, 1], color='navy', lw=lw, linestyle='--')\n",
+    "plt.xlim([0.0, 1.0])\n",
+    "plt.ylim([0.0, 1.05])\n",
+    "plt.yticks([i/20.0 for i in range(21)])\n",
+    "plt.xticks([i/20.0 for i in range(21)])\n",
+    "plt.xlabel('False Positive Rate')\n",
+    "plt.ylabel('True Positive Rate')\n",
+    "plt.title('Receiver operating characteristic (ROC) Curve for Test Set')\n",
+    "plt.legend(loc=\"lower right\")\n",
+    "print('AUC: {}'.format(auc(fpr, tpr)))\n",
+    "plt.show()"
    ]
   },
   {
