--- a/index.ipynb
+++ b/index.ipynb
@@ -2328,9 +2328,85 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/envs/learn-env/lib/python3.6/site-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LogisticRegression(C=0.001, class_weight=None, dual=False,\n",
+      "          fit_intercept=False, intercept_scaling=1, max_iter=100,\n",
+      "          multi_class='warn', n_jobs=None, penalty='l2', random_state=None,\n",
+      "          solver='warn', tol=0.0001, verbose=0, warm_start=False)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/envs/learn-env/lib/python3.6/site-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AUC for 0.001: 0.9641181613456891\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/envs/learn-env/lib/python3.6/site-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n"
+     ]
+    }
+   ],
    "source": [
-    "#Your code here\n"
+    "#Your code here\n",
+    "C_param_range = [0.001,0.01,0.1,1,10,100]\n",
+    "names = [0.001,0.01,0.1,1,10,100]\n",
+    "colors = sns.color_palette(\"Set2\")\n",
+    "\n",
+    "plt.figure(figsize=(10,8))\n",
+    "\n",
+    "for n, c in enumerate(C_param_range):\n",
+    "    #Fit a model\n",
+    "    logreg = LogisticRegression(fit_intercept = False, C = c) #Starter code\n",
+    "    model_log = logreg.fit(X_train, y_train)\n",
+    "    print(model_log) #Preview model params\n",
+    "\n",
+    "    #Predict\n",
+    "    y_hat_test = logreg.predict(X_test)\n",
+    "\n",
+    "    y_score = logreg.fit(X_train, y_train).decision_function(X_test)\n",
+    "\n",
+    "    fpr, tpr, thresholds = roc_curve(y_test, y_score)\n",
+    "    \n",
+    "    print('AUC for {}: {}'.format(names[n], auc(fpr, tpr)))\n",
+    "    lw = 2\n",
+    "    plt.plot(fpr, tpr, color=colors[n],\n",
+    "             lw=lw, label='ROC curve Normalization Weight: {}'.format(names[n]))\n",
+    "plt.plot([0, 1], [0, 1], color='navy', lw=lw, linestyle='--')\n",
+    "plt.xlim([0.0, 1.0])\n",
+    "plt.ylim([0.0, 1.05])\n",
+    "\n",
+    "plt.yticks([i/20.0 for i in range(21)])\n",
+    "plt.xticks([i/20.0 for i in range(21)])\n",
+    "plt.xlabel('False Positive Rate')\n",
+    "plt.ylabel('True Positive Rate')\n",
+    "plt.title('Receiver operating characteristic (ROC) Curve')\n",
+    "plt.legend(loc=\"lower right\")\n",
+    "plt.show()"
    ]
   },
   {
