--- a/index.ipynb
+++ b/index.ipynb
@@ -2472,6 +2472,26 @@
      "text": [
       "AUC for 1: 0.9003675978297607\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/envs/learn-env/lib/python3.6/site-packages/sklearn/svm/base.py:922: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n",
+      "/opt/conda/envs/learn-env/lib/python3.6/site-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LogisticRegression(C=10, class_weight=None, dual=False, fit_intercept=False,\n",
+      "          intercept_scaling=1, max_iter=100, multi_class='warn',\n",
+      "          n_jobs=None, penalty='l2', random_state=None, solver='warn',\n",
+      "          tol=0.0001, verbose=0, warm_start=False)\n"
+     ]
     }
    ],
    "source": [
