Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2608,7 +2608,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here\n"
+    "#Your code here\n",
+    "from imblearn.over_sampling import SMOTE, ADASYN\n"
    ]
   },
   {
