Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2609,7 +2609,10 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "from imblearn.over_sampling import SMOTE, ADASYN\n"
+    "from imblearn.over_sampling import SMOTE, ADASYN\n",
+    "print(y.value_counts()) #Previous original class distribution\n",
+    "X_resampled, y_resampled = SMOTE().fit_sample(X, y) \n",
+    "print(pd.Series(y_resampled).value_counts()) #Preview synthetic sample class distribution"
    ]
   },
   {
