Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2653,7 +2653,7 @@
     "from imblearn.over_sampling import SMOTE, ADASYN\n",
     "print(y.value_counts()) #Previous original class distribution\n",
     "X_resampled, y_resampled = SMOTE().fit_sample(X, y) \n",
-    "print(pd.Series(y_resampled).value_counts()) #Preview synthetic sample class distribution"
+    "print(pd.Series(y_resampled).value_counts()) #Preview synthetic sample class distribution\n"
    ]
   },
   {
