--- a/index.ipynb
+++ b/index.ipynb
@@ -2659,6 +2659,57 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/envs/learn-env/lib/python3.6/site-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "weights = [None, 'balanced', {1:2, 0:1}, {1:10, 0:1}, {1:100, 0:1}, {1:1000, 0:1}]\n",
+    "names = ['None', 'Balanced', '2 to 1', '10 to 1', '100 to 1', '1000 to 1']\n",
+    "colors = sns.color_palette(\"Set2\")\n",
+    "\n",
+    "plt.figure(figsize=(10,8))\n",
+    "\n",
+    "for n, weight in enumerate(weights):\n",
+    "    #Fit a model\n",
+    "    logreg = LogisticRegression(fit_intercept = False, C = 1e12, class_weight=weight) #Starter code\n",
+    "    model_log = logreg.fit(X_train, y_train)\n",
+    "    print(model_log) #Preview model params\n",
+    "\n",
+    "    #Predict\n",
+    "    y_hat_test = logreg.predict(X_test)\n",
+    "\n",
+    "    y_score = logreg.fit(X_train, y_train).decision_function(X_test)\n",
+    "\n",
+    "    fpr, tpr, thresholds = roc_curve(y_test, y_score)\n",
+    "    \n",
+    "    print('AUC for {}: {}'.format(names[n], auc(fpr, tpr)))\n",
+    "    lw = 2\n",
+    "    plt.plot(fpr, tpr, color=colors[n],\n",
+    "             lw=lw, label='ROC curve {}'.format(names[n]))\n",
+    "plt.plot([0, 1], [0, 1], color='navy', lw=lw, linestyle='--')\n",
+    "plt.xlim([0.0, 1.0])\n",
+    "plt.ylim([0.0, 1.05])\n",
+    "\n",
+    "plt.yticks([i/20.0 for i in range(21)])\n",
+    "plt.xticks([i/20.0 for i in range(21)])\n",
+    "plt.xlabel('False Positive Rate')\n",
+    "plt.ylabel('True Positive Rate')\n",
+    "plt.title('Receiver operating characteristic (ROC) Curve')\n",
+    "plt.legend(loc=\"lower right\")\n",
+    "plt.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
