--- a/index.ipynb
+++ b/index.ipynb
@@ -2835,6 +2835,25 @@
       "/opt/conda/envs/learn-env/lib/python3.6/site-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
       "  FutureWarning)\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LogisticRegression(C=1000000000000.0, class_weight={1: 1000, 0: 1},\n",
+      "          dual=False, fit_intercept=False, intercept_scaling=1,\n",
+      "          max_iter=100, multi_class='warn', n_jobs=None, penalty='l2',\n",
+      "          random_state=None, solver='warn', tol=0.0001, verbose=0,\n",
+      "          warm_start=False)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/envs/learn-env/lib/python3.6/site-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n"
+     ]
     }
    ],
    "source": [
